<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="159dp"
        android:background="@color/colorPrimaryDark"
        android:fadingEdge="horizontal|vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/laCurrTaskCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="4dp"
            android:text="@string/current_task_caption"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/label_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.018"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.03" />

        <TextView
            android:id="@+id/laTimeCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="100dp"
            android:text="@string/time_caption"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/label_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.018"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/laTaskDescrValue"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/laProjectCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="16dp"
            android:text="@string/project_caption"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/label_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.018"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/laTimeValue"
            app:layout_constraintVertical_bias="0.666" />

        <TextView
            android:id="@+id/laTimeValue"
            android:layout_width="159dp"
            android:layout_height="79dp"
            android:layout_marginBottom="36dp"
            android:text="12:00"
            android:textAlignment="center"
            android:textColor="#FFC107"
            android:textSize="@dimen/main_time"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.54"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/laTaskDescrValue"
            app:layout_constraintVertical_bias="0.666" />

        <TextView
            android:id="@+id/laTaskDescrValue"
            android:layout_width="336dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:text="Task description"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/text_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toEndOf="@+id/laCurrTaskCaption"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/laProjectValue"
            android:layout_width="336dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:text="P000 - Project name"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/text_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/laProjectCaption"
            app:layout_constraintTop_toBottomOf="@+id/laTimeValue" />

        <ImageButton
            android:id="@+id/btnFinishTask"
            android:layout_width="61dp"
            android:layout_height="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.68"
            app:layout_constraintStart_toEndOf="@+id/laTimeValue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.495"
            app:srcCompat="@android:drawable/checkbox_on_background" />

        <Button
            android:id="@+id/btnDemo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Demo Data"
            app:layout_constraintTop_toBottomOf="@+id/laTaskDescrValue"
            tools:layout_editor_absoluteX="39dp" />

        <Button
            android:id="@+id/btnProjects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Button"
            app:layout_constraintTop_toBottomOf="@+id/btnDemo"
            tools:layout_editor_absoluteX="39dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/projectTaskItems"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/logger_entry" />

</androidx.constraintlayout.widget.ConstraintLayout>